[package]
name = "settlers_rs"
version = "0.1.0"
authors = ["STSchiff <chrisheib@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = { version = "0.4.1", features = ["vulkan"] }
ndarray = "0.13.1"
rand = "0.7.3"